@@ -1,13 +1,0 @@
-
-using System;
-using System.Collections;
-
-namespace Mono.Addins.Description
-{
-	public class ConditionCollection: ObjectDescriptionCollection
-	{
-		public Condition this [int n] {
-			get { return (Condition) List [n]; }
-		}
-	}
-}
